--- a/ansible/test/Vagrantfile
+++ b/ansible/test/Vagrantfile
@@ -1,17 +1,23 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "crystax/amazon2023"
-  config.vm.box_architecture = "amd64"
-  config.vm.define "docker"
-  config.vm.synced_folder ".", "/vagrant", disabled: true
+  host_cpu = RbConfig::CONFIG['host_cpu']
+  
+  if host_cpu =~ /x86_64/
+    config.vm.box = "gbailey/amzn2"
+  else
+    config.vm.box = "generic/fedora38"
+    config.vm.box_architecture = "amd64"
+    config.vm.synced_folder ".", "/vagrant", disabled: true
 
-  config.vm.provider "qemu" do |qemu|
-    qemu.machine = "q35"
-    qemu.arch = "x86_64"
-    qemu.net_device = "virtio-net-pci"
-    qemu.cpu = "max"
-    qemu.ssh_port = "22"
+    config.vm.provider "qemu" do |qemu|
+      qemu.machine = "q35"
+      qemu.arch = "x86_64"
+      qemu.net_device = "virtio-net-pci"
+      qemu.cpu = "max"
+      qemu.ssh_port = "22"
+    end
   end
 
+  config.vm.define "docker"
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "../playbook.yml"
   end
